--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -589,6 +589,7 @@
                             <li>Industry 4.0, Smart Manufacturing, and Supply Chain Innovation</li>
                             <li>Sustainability and Green Business Strategies in the Digital Era</li>
                             <li>Entrepreneurship, Startups, and Innovation in the Digital Economy</li>
+                            <li>Technology innovations in Accounting, Finance, Financial markets and Investments</li>
                         </ul>
                     </li>
                     <li class="theme-item">
@@ -596,12 +597,33 @@
                         <ul>
                             <li>Indigenous Science, Mathematics, and Astronomy in Ancient India</li>
                             <li>Ayurveda, Yoga, and Naturopathy: Integrating Traditional Health Systems</li>
-                            <li>Multidisciplinary and Holistic Education: Role of IKS</li>
-                            <li>Integration of Indian Languages and Classical Knowledge in NEP</li>
+                            <li>Indian Philosophical Thought and Educational Practices </li>
+                            <li>IKS and Environmental Sustainability: Traditional Ecological Knowledge </li>
                             <li>Skill Development and Vocational Training through IKS</li>
-                            <li>Technology and Digital Initiatives for Promoting IKS</li>
-                            <li>Role of Higher Education Institutions in Promoting IKS under NEP</li>
-                            <li>Internationalization of Indian Knowledge Systems</li>
+                            <li>Preservation and Promotion of Indian Arts, Music, and Literature </li>
+                            <li>Digital Innovations and Technology for Dissemination of IKS</li>
+                        </ul>
+                    </li>
+                    <li class="theme-item">
+                        <div class="theme-title"><i class="fas fa-laptop-code"></i> Digital Humanities</div>
+                        <ul>
+                            <li>Digital Archives, Preservation, and Cultural Heritage </li>
+                            <li>Computational Methods in Humanities Research </li>
+                            <li>Digital Storytelling and Media  </li>
+                            <li>Pedagogy and Public Engagement in Digital Humanities</li>
+                            <li>Ethics, Accessibility, and Inclusion in Digital Spaces  </li>
+                        </ul>
+                    </li>
+                    <li class="theme-item">
+                        <div class="theme-title"><i class="fas fa-graduation-cap"></i> National Education Policy (NEP) and Educational Reforms</div>
+                        <ul>
+                            <li>Multidisciplinary and Holistic Education: Vision and Implementation </li>
+                            <li>Integration of Indian Languages and Classical Knowledge in the Curriculum </li>
+                            <li>Curriculum and Pedagogical Reforms under NEP 2020  </li>
+                            <li>Role of Higher Education Institutions in NEP Implementation </li>
+                            <li>Foundational Literacy and Numeracy: NEP’s Early Childhood Focus </li>
+                            <li>Assessment Reforms and Competency-Based Learning </li>
+                            <li>Equity, Inclusion, and Gender Sensitivity in the NEP Framework</li>
                         </ul>
                     </li>
                 </ul>
