--- a/committee.html
+++ b/committee.html
@@ -286,6 +286,18 @@
                         </div>
                     </div>
                 </div>
+                <h3 class="mb-3 mt-4 text-center">Co Chair</h3>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/cochair.png" class="rounded-circle mx-auto mt-2" alt="Dr Sakshi Varshney" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr Sakshi Varshney</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Associate Proffessor & Dept. Coordinator (JIIT-128)</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- Convenors -->
                 <h3 class="mb-3 mt-4 text-center">Convenors</h3>
                 <div class="row justify-content-center mb-3">
