--- a/committee.html
+++ b/committee.html
@@ -292,7 +292,7 @@
                         <div class="card h-100 text-center p-2">
                             <img src="images/cochair.png" class="rounded-circle mx-auto mt-2" alt="Dr Sakshi Varshney" style="width:90px; height:90px; object-fit:contain; background:#fff;">
                             <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr Sakshi Varshney</h6>
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Sakshi Varshney</h6>
                                 <div class="text-muted" style="font-size:0.9rem;">Associate Proffessor & Dept. Coordinator (JIIT-128)</div>
                             </div>
                         </div>
