--- a/committee.html
+++ b/committee.html
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-md-3 mb-3">
+                    <!-- <div class="col-6 col-md-3 mb-3">
                         <div class="card h-100 text-center p-2">
                             <img src="images/patron2.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. Bodh Raj Mehta" style="width:90px; height:90px; object-fit:contain; background:#fff;">
                             <div class="card-body p-2">
@@ -273,7 +273,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Conference Chair -->
                 <h3 class="mb-3 mt-4 text-center">Conference Chair</h3>
                 <div class="row justify-content-center mb-3">
