--- a/index.html
+++ b/index.html
@@ -1494,13 +1494,13 @@
               <div class="patron-role">Pro Chancellor, JIIT</div>
             </div>
           </div>
-          <div class="col-6 col-md-3 text-center">
+          <!-- <div class="col-6 col-md-3 text-center">
             <div class="patron-card">
               <img src="images/patron2.jpg" alt="Prof. Bodh Raj Mehta" class="patron-img-minimal mb-2">
               <div class="patron-name">Prof. Bodh Raj Mehta</div>
               <div class="patron-role">Vice Chancellor, JIIT</div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <style>
