--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -514,6 +514,13 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Call for Papers</h2>
             
+            <!-- Disclaimer -->
+            <div class="content-card" data-aos="fade-up" data-aos-delay="50" style="background:#ffffff;">
+                <p style="margin:0; font-size:1rem; color:#333;">
+                    <strong>Powered By:</strong> The Microsoft CMT service was used for managing the peer-reviewing process for this conference. This service was provided for free by Microsoft and they bore all expenses, including costs for Azure cloud services as well as for software development and support.
+                </p>
+            </div>
+
             <!-- Conference Theme -->
             <div class="content-card" data-aos="fade-up">
                 <h3 class="mb-4">Conference Theme</h3>
@@ -640,12 +647,14 @@
                         <span class="text-warning" style="font-size:1.1em;"><i class="fas fa-star"></i></span>
                         Authors have chance to publish in reputed international Journals Indexed in SCOPUS, ABDC, and WOS etc. Following journals have confirmed collaboration with our Conference:
                         <ol class="mt-2 mb-2 ps-4" style="font-size:1em;">
-                            <li>International Journal of Learning and Change</li>
-                            <li>International Journal of Entrepreneurship and Small Business</li>
-                            <li>International Journal of Business and Globalization.</li>
-                            <li>International journal of E-Entrepreneurship and Innovation</li>
-                            <li>World Review of Entrepreneurship, Management and Sustainable Development.</li>
+                            <li>International Journal of Learning and Change (Scopus Q4)</li>
+                            <li>International Journal of Entrepreneurship and Small Business (Scopus Q3)</li>
+                            <li>International Journal of Business and Globalization. (Scopus Q4)</li>
+                            <li>International journal of E-Entrepreneurship and Innovation (Scopus Q3)</li>
+                            <li>World Review of Entrepreneurship, Management and Sustainable Development.(Scopus Q4)</li>
                             <li>Journal of English Language Teaching.</li>
+                            <li>Reflections (Scopus Q2).</li>
+
                         </ol>
                         <span class="ms-4">More journals of other domain will be added soon</span>
                         <div class="fst-italic mt-2 ms-4" style="font-size:0.98em; color:#444;">
