--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -709,7 +709,7 @@
                     <div class="submission-step">
                         <div class="step-number">2</div>
                         <h4 class="mb-3">Full Paper Submission</h4>
-                        <p>Upon acceptance of the abstract, submit a full paper of 6000-8000 words following the provided template.</p>
+                        <p>Upon acceptance of the abstract, submit a full paper following the submission guidelines.</p>
                       
                         <!-- buttons row -->
                         <div class="submission-actions d-flex gap-2 flex-wrap mt-3">
