--- a/index.html
+++ b/index.html
@@ -1407,6 +1407,12 @@
           flex-wrap: wrap;
           gap: 5px;
         }
+        
+        /* New date highlight (match registration page) */
+        .date-container > span:last-child {
+          color: #2e7d32;
+          font-weight: 700;
+        }
       
         .countdown {
           flex: 1;
