--- a/registration.html
+++ b/registration.html
@@ -805,7 +805,7 @@
                             </tr>
                             <tr>
                                 <td>Students (UG/PG)</td>
-                                <td>-</td>
+                                <td>50 USD</td>
                                 <td>1000 INR</td>
                             </tr>
                         </tbody>
@@ -869,7 +869,7 @@
                         <div class="fee-card-body">
                             <div class="fee-item">
                                 <span class="fee-label">Abroad:</span>
-                                <span class="fee-amount">-</span>
+                                <span class="fee-amount">50 USD</span>
                             </div>
                             <div class="fee-item">
                                 <span class="fee-label">India:</span>
